# news-brief-generator-A2A

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: __init__.py  config.py  contextualist.py  contracts.py  mcp_client.py  publisher.py  regions.py  scout.py
app/: storage.py  streamlit_app.py
docs/: ARCHITECTURE.md  PRD.md
lessons/: task_00_lessons.md  task_00_teaching.md  task_01_lessons.md  task_01_teaching.md  task_02_lessons.md  task_02_teaching.md  task_03_lessons.md  task_03_teaching.md  task_04_lessons.md  task_04_teaching.md  task_05_lessons.md  task_05_teaching.md  task_06_lessons.md  task_06_teaching.md  task_07_lessons.md  task_07_teaching.md  task_08_lessons.md  task_08_teaching.md  task_09_lessons.md  task_09_teaching.md  task_10_lessons.md  task_10_teaching.md  task_11_lessons.md  task_11_teaching.md
scripts/: check_keys.py
servers/: __init__.py  finance_server.py  media_server.py  world_data_server.py
tests/: test_contextualist.py  test_contracts.py  test_finance_server.py  test_media_server.py  test_publisher.py  test_scout.py  test_storage.py  test_world_data_server.py
