[project]
name = "news-brief-generator-a2a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-core>=1.8.1",
    "agent-framework-openai>=1.8.1",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "pydantic>=2.11,<3",
    "python-dotenv>=1,<2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
